fix rotate button flickering text on hover

--- a/css/basic-elements.css
+++ b/css/basic-elements.css
@@ -363,6 +363,7 @@ a {
         }
         .big-card .cta button {
             width: 100%;
+            will-change: opacity;
             transition: opacity 0.2s ease 0s;
         }
         .big-card .cta svg{
